--- a/tests/test_vagrant.yml
+++ b/tests/test_vagrant.yml
@@ -2,9 +2,11 @@
 
 # Tests for docker role
 
-- hosts : all
-  remote_user : vagrant
-  roles :
+- hosts: all
+  remote_user: vagrant
+  roles:
     - .
-  vars : {}
+  post_tasks:
+    - include: ./common_tests.yml
+  vars: {}
 
