--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,6 +4,11 @@
 - name: Load the OS specific varibles
   include_vars: "{{ role_path }}/vars/{{ ansible_os_family | lower }}.yml"
 
+- name: Load the distribution specific varibles
+  include_vars: "{{ role_path }}/vars/{{ ansible_distribution | lower }}.yml"
+  when: >
+    '{{ ansible_os_family | lower }}' != '{{ ansible_distribution | lower }}'
+
 - name: Load user specific varibles
   include_vars: "{{ docker_custom_repository_vars_file | trim }}"
   when:
