--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -17,3 +17,7 @@ docker_apt_repository_key_delay: 10
 # Packages to remove before install docker
 docker_packages_to_remove: False
 
+# Packages to install
+docker_packages_to_install: []
+docker_package_to_install_state: 'present'
+
