--- a/tests/common_tests.yml
+++ b/tests/common_tests.yml
@@ -11,7 +11,7 @@
   failed_when: "docker_test_apt_key.stderr != ''"
   when: ansible_os_family == 'Debian'
 
-- name: The old packages need to be removed
+- name: Test - The old packages need to be removed
   become: True
   register: docker_test_packages_remove
   apt:
@@ -26,7 +26,7 @@
     - ansible_os_family == 'Debian'
     - docker_packages_to_remove != False
 
-- name: Check if packages are removed
+- name: Test - Check if packages are removed
   fail:
     msg: 'Old packages are not removed !'
   with_items: docker_test_packages_remove.results
@@ -34,4 +34,12 @@
     - docker_test_packages_remove is defined
     - item.stdout is defined
     - item.stdout.find('will be REMOVED') != -1
+
+- name: Test - Can execute a docker test
+  become: True
+  register: docker_test_run_hello_world
+  command: "docker run hello-world"
+  changed_when: False
+  failed_when: >
+    docker_test_run_hello_world.stdout.find('Hello from Docker.') == -1
 
