--- a/tasks/install_debian_family.yml
+++ b/tasks/install_debian_family.yml
@@ -34,4 +34,5 @@
     name: "{{ item }}"
     state: "{{ docker_package_to_install_state }}"
   with_items: docker_packages_to_install
+  notify: restart docker
 
