--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,3 +1,10 @@
 ---
 
 # Handlers file for docker
+
+- name: restart docker
+  become: True
+  service:
+    name: "{{ docker_service_name }}"
+    state: restarted
+
