--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -20,3 +20,12 @@
     - docker
   when: ansible_os_family == "Debian"
 
+- name: Service management
+  become: True
+  register: docker_test_service_settings
+  service:
+    name: "{{ docker_service_name }}"
+    enabled: "{{ docker_service_enabled }}"
+    state: "{{ docker_service_state }}"
+  failed_when: docker_test_service_settings.changed
+
