--- a/tests/common_tests.yml
+++ b/tests/common_tests.yml
@@ -43,3 +43,12 @@
   failed_when: >
     docker_test_run_hello_world.stdout.find('Hello from Docker.') == -1
 
+- name: Test - Service should be started and enabled
+  become: True
+  register: docker_test_service_settings
+  service:
+    name: "{{ docker_service_name }}"
+    enabled: "{{ docker_service_enabled }}"
+    state: "{{ docker_service_state }}"
+  failed_when: docker_test_service_settings.changed
+
