--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -26,6 +26,13 @@ docker_service_name: 'docker'
 docker_service_enabled: True
 docker_service_state: started
 
+# Configuration
+docker_configuration_file_dest: '/etc/default/docker'
+docker_configuration_file_mode: '0644'
+docker_configuration_file_owner: 'root'
+docker_configuration_file_group: 'root'
+docker_configuration_binary_file: ''
+docker_temporary_files_path: ''
 
 # Docker daemon options
 #----------------------
@@ -103,7 +110,7 @@ docker_daemon_option_icc: True
 docker_daemon_option_insecure_registry: []
 
 # Default IP when binding container ports
-docker_daemon_option_ip: 0.0.0.0
+docker_daemon_option_ip: '0.0.0.0'
 
 # Enable net.ipv4.ip_forward
 docker_daemon_option_ip_forward: True
@@ -154,13 +161,13 @@ docker_daemon_option_storage_opt: []
 docker_daemon_option_tls: False
 
 # Trust certs signed only by this CA
-docker_daemon_option_tlscacert: '~/.docker/ca.pem'
+docker_daemon_option_tlscacert: ''
 
 # Path to TLS certificate file
-docker_daemon_option_tlscert: '~/.docker/cert.pem'
+docker_daemon_option_tlscert: ''
 
 # Path to TLS key file
-docker_daemon_option_tlskey: '~/.docker/key.pem'
+docker_daemon_option_tlskey: ''
 
 # Use TLS and verify the remote
 docker_daemon_option_tlsverify: False
