--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,20 +2,18 @@
 
 galaxy_info:
   author: Alexandre Chaussier
-  description: Install docker package
+  description: Install and configure docker package
   company: Infopen (http://infopen.pro)
   license: MIT
-  min_ansible_version: 1.5
-
+  min_ansible_version: 2.0
+  github_branch: master
   platforms:
     - name: Ubuntu
       versions:
         - trusty
         - vivid
         - wily
-
-  categories:
+  galaxy_tags:
     - system
-
 dependencies: []
 
