--- a/tests/test_travis.yml
+++ b/tests/test_travis.yml
@@ -1,14 +1,15 @@
 ---
 
-# Tests for docker role
+# Role travis tests
 
 - hosts: localhost
   remote_user: root
   roles:
-    - ansible-role-docker
+    - "{{ role_name }}"
   post_tasks:
-    - include: ./common_tests.yml
+    - include: ./test_common.yml
   vars:
     # Travis box include old version of docker-engine, so force latest version
     docker_package_to_install_state: 'latest'
+    role_name: "{{ lookup('env','TRAVIS_REPO_SLUG') }}"
 
