--- a/tests/test_vagrant.yml
+++ b/tests/test_vagrant.yml
@@ -1,13 +1,14 @@
 ---
 
-# Tests for docker role
+# Role Vagrant tests
 
 - hosts: all
   remote_user: vagrant
   roles:
-    - .
+    - "{{ role_name }}"
   post_tasks:
-    - include: ./common_tests.yml
+    - include: ./test_common.yml
   vars:
     docker_package_to_install_state: 'latest'
+    role_name: "{{ lookup('env','ANSIBLE_ROLE_NAME') }}"
 
