--- a/tests/test_vagrant.yml
+++ b/tests/test_vagrant.yml
@@ -9,6 +9,10 @@
   post_tasks:
     - include: ./test_common.yml
   vars:
+    docker_daemon_option_ip: '127.0.0.1'
+    docker_daemon_option_host:
+      - 'tcp://127.0.0.1:8081'
+      - 'unix:///var/run/docker.sock'
     docker_package_to_install_state: 'latest'
     role_name: "{{ lookup('env','ANSIBLE_ROLE_NAME') }}"
 
