--- a/vars/debian.yml
+++ b/vars/debian.yml
@@ -7,10 +7,10 @@ docker_apt_repository_key_server: 'hkp://p80.pool.sks-keyservers.net:80'
 docker_apt_repository_key_id: '58118E89F3A912897C070ADBF76221572C52609D'
 
 # Repository settings
-docker_apt_repository_file_content: >
-  deb https://apt.dockerproject.org/repo
-  {{ ansible_distribution | lower }}-{{ ansible_distribution_release | lower }}
-  main
+docker_apt_repository_file_content: "{{
+  'deb https://apt.dockerproject.org/repo '
+  ~ (ansible_distribution | lower ) ~ '-'
+  ~ (ansible_distribution_release | lower) ~ ' main' }}"
 
 # Packages to remove before install
 docker_packages_to_remove:
