--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -2,7 +2,7 @@
 
 # Manage Docker configuration
 
-- name: Generate default file
+- name: 'Generate default file'
   become: True
   template:
     src: "{{ role_path }}/templates/default.j2"
@@ -10,5 +10,4 @@
     mode: "{{ docker_configuration_file_mode }}"
     owner: "{{ docker_configuration_file_owner }}"
     group: "{{ docker_configuration_file_group }}"
-  notify: restart docker
-
+  notify: 'restart docker'
