--- a/tests/test_travis.yml
+++ b/tests/test_travis.yml
@@ -2,12 +2,12 @@
 
 # Role travis tests
 
-- hosts: localhost
-  remote_user: root
+- hosts: 'localhost'
+  remote_user: 'root'
   roles:
     - "{{ role_name }}"
   post_tasks:
-    - include: ./test_common.yml
+    - include: './test_common.yml'
   vars:
     docker_daemon_option_ip: '127.0.0.1'
     docker_daemon_option_host:
@@ -16,4 +16,3 @@
     # Travis box include old version of docker-engine, so force latest version
     docker_package_to_install_state: 'latest'
     role_name: "{{ lookup('env','TRAVIS_REPO_SLUG') }}"
-
