Change package installation management and default system vars can be overwrited

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,23 +3,25 @@
 # Defaults file for docker
 
 # Default variables for Debian family repository management
-# Set these variables into a file to erase default values for debian family
-# Set the path of this file to docker_custom_repository_vars_file variable
-docker_custom_repository_vars_file : False
-docker_apt_repository_key_server: ''
-docker_apt_repository_key_id: ''
-docker_apt_repository_file_content: ''
+docker_apt_repo_key_server: 'hkp://p80.pool.sks-keyservers.net:80'
+docker_apt_repo_key_id: '58118E89F3A912897C070ADBF76221572C52609D'
+docker_apt_repo_file_content: "{{
+  'deb https://apt.dockerproject.org/repo '
+  ~ (ansible_distribution | lower ) ~ '-'
+  ~ (ansible_distribution_release | lower) ~ ' main' }}"
 
 # Sometimes, key servers respond slowly, add delay and retry
-docker_apt_repository_key_retries: 3
-docker_apt_repository_key_delay: 10
+docker_apt_repo_key_retries: 3
+docker_apt_repo_key_delay: 10
 
-# Packages to remove before install docker
-docker_packages_to_remove: False
+# Packages to remove before install docker, overwrite default role
+# docker_default_packages_to_remove variable
+docker_packages_to_remove: []
 
-# Packages to install
+# Packages to install, overwrite default role docker_default_packages_to_install
+# variable
 docker_packages_to_install: []
-docker_package_to_install_state: 'present'
+docker_packages_to_install_state: 'present'
 
 # Service settings
 docker_service_name: 'docker'
