--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,19 +1,20 @@
 ---
 
 galaxy_info:
-  author: Alexandre Chaussier
-  description: Install and configure docker package
-  company: Infopen (http://infopen.pro)
-  license: MIT
-  min_ansible_version: 2.0
-  github_branch: master
+  author: 'Alexandre Chaussier'
+  description: 'Ansible role to install and configure Docker'
+  company: 'Infopen (http://www.infopen.pro)'
+  license: 'MIT'
+  min_ansible_version: '2.0'
+  github_branch: 'master'
   platforms:
-    - name: Ubuntu
+    - name: 'Debian'
       versions:
-        - trusty
-        - vivid
-        - wily
+        - 'jessie'
+    - name: 'Ubuntu'
+      versions:
+        - 'trusty'
+        - 'xenial'
   galaxy_tags:
-    - system
+    - 'system'
 dependencies: []
-
