--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,8 +2,13 @@
 
 # Handlers main file for docker role
 
-- name: 'restart docker'
+- name: 'HANDLER | Restart docker'
   become: True
   service:
     name: "{{ docker_service_name }}"
     state: 'restarted'
+  when: "docker_service_state == 'started'"
+  tags:
+    - 'role::docker'
+    - 'role::docker::config'
+    - 'role::docker::install'
