--- a/molecule.yml
+++ b/molecule.yml
@@ -6,7 +6,15 @@ ansible:
   raw_env_vars:
     ANSIBLE_NOCOWS: 1
   group_vars:
-    all: {}
+    all:
+      docker_daemon_options:
+        hosts:
+          - 'tcp://127.0.0.1:8081'
+          - 'unix:///var/run/docker.sock'
+        tlscert: '/tmp/server.crt'
+        tlskey: '/tmp/server.key'
+      #docker_daemon_options: "{{ _docker_daemon_options | combine(__docker_daemon_options) }}"
+
 dependency:
   name: 'galaxy'
 driver:
@@ -14,14 +22,16 @@ driver:
 docker:
   containers:
     - name: 'docker-docker-jessie'
-      image: 'debian'
-      image_version: 'jessie'
-    - name: 'docker-docker-trusty'
-      image: 'ubuntu'
-      image_version: 'trusty'
+      image: 'minimum2scp/systemd-jessie'
+      image_version: 'latest'
+      privileged: True
+      cap_add:
+        - 'SYS_PTRACE'
     - name: 'docker-docker-xenial'
-      image: 'ubuntu'
-      image_version: 'xenial'
+      image: 'solita/ubuntu-systemd'
+      image_version: '16.04'
+      command: '/sbin/init'
+      privileged: True
 molecule:
   ignore_paths:
     - '.git'
@@ -32,9 +42,6 @@ vagrant:
   platforms:
     - name: 'jessie64'
       box: 'debian/jessie64'
-      linked_clone: True
-    - name: 'trusty64'
-      box: 'ubuntu/trusty64'
       linked_clone: True
     - name: 'xenial64'
       box: 'ubuntu/xenial64'
