--- a/tests/playbook.yml
+++ b/tests/playbook.yml
@@ -17,6 +17,23 @@
 
 
 - hosts: 'all'
+  pre_tasks:
+    - name: 'PREREQUISITES | APT | Do an apt-get update'
+      become: True
+      raw: 'apt-get update -qq'
+      changed_when: False
+    - name: 'PREREQUISITES | APT | Install net-tools, openssl and systemd'
+      become: True
+      raw: 'apt-get install -qq net-tools openssl systemd'
+      changed_when: False
+    - name: 'PREREQUISITES | SSL | Generate SSL self-signed certificate'
+      shell: >
+        openssl genrsa -des3 -passout pass:x -out /tmp/server.pass.key 2048;
+        openssl rsa -passin pass:x -in /tmp/server.pass.key -out /tmp/server.key;
+        rm /tmp/server.pass.key;
+        openssl req -new -key /tmp/server.key -out /tmp/server.csr -subj "/C=FB/ST=Bar/L=Foobar/O=Ansible/OU=Tests/CN=ansible.role";
+        openssl x509 -req -days 365 -in /tmp/server.csr -signkey /tmp/server.key -out /tmp/server.crt;
+      changed_when: False
   roles:
     - role: "{{ role_name }}"
   vars:
