--- a/tox.ini
+++ b/tox.ini
@@ -12,4 +12,4 @@ deps =
     ansible22: ansible>=2.2,<2.3
     ansible23: ansible>=2.3,<2.4
 commands =
-    molecule test --platform=all --driver={env:MOLECULE_DRIVER:docker}
+    molecule --debug test
