--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -29,12 +29,13 @@
     - name: 'PREREQUISITES | SSL | Generate SSL self-signed certificate'
       shell: >
         openssl genrsa -des3 -passout pass:x -out /tmp/server.pass.key 2048;
-        openssl rsa -passin pass:x -in /tmp/server.pass.key -out /tmp/server.key;
+        openssl rsa -passin pass:x -in /tmp/server.pass.key
+        -out /tmp/server.key;
         rm /tmp/server.pass.key;
-        openssl req -new -key /tmp/server.key -out /tmp/server.csr -subj "/C=FB/ST=Bar/L=Foobar/O=Ansible/OU=Tests/CN=ansible.role";
-        openssl x509 -req -days 365 -in /tmp/server.csr -signkey /tmp/server.key -out /tmp/server.crt;
+        openssl req -new -key /tmp/server.key -out /tmp/server.csr
+        -subj "/C=FB/ST=Bar/L=Foobar/O=Ansible/OU=Tests/CN=ansible.role";
+        openssl x509 -req -days 365 -in /tmp/server.csr
+        -signkey /tmp/server.key -out /tmp/server.crt;
       changed_when: False
   roles:
-    - role: "{{ role_name }}"
-  vars:
-    role_name: "{{ playbook_dir | basename }}"
+    - role: "{{ role_name | default('ansible-role-docker') }}"
