--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -47,6 +47,7 @@
     mode: "{{ item.mode | default('0400') }}"
     owner: "{{ item.owner | default('root') }}"
     group: "{{ item.group | default('root') }}"
+  no_log: True
   with_items: "{{ docker_registries_certificates }}"
   when: "item.client_cert is defined"
 
@@ -58,6 +59,7 @@
     mode: "{{ item.mode | default('0400') }}"
     owner: "{{ item.owner | default('root') }}"
     group: "{{ item.group | default('root') }}"
+  no_log: True
   with_items: "{{ docker_registries_certificates }}"
   when: "item.client_key is defined"
 
@@ -69,5 +71,6 @@
     mode: "{{ item.mode | default('0644') }}"
     owner: "{{ item.owner | default('root') }}"
     group: "{{ item.group | default('root') }}"
+  no_log: True
   with_items: "{{ docker_registries_certificates }}"
   when: "item.ca_cert is defined"
