--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,18 +2,20 @@
 
 galaxy_info:
   author: 'Alexandre Chaussier'
-  description: 'Ansible role to install and configure Docker'
+  description: 'Ansible role to install and configure docker'
   company: 'Infopen (http://www.infopen.pro)'
   license: 'MIT'
-  min_ansible_version: '2.0'
+  min_ansible_version: '2.4'
   github_branch: 'master'
   platforms:
     - name: 'Debian'
       versions:
         - 'jessie'
+        - 'stretch'
     - name: 'Ubuntu'
       versions:
         - 'xenial'
+        - 'bionic'
   galaxy_tags:
     - 'system'
 dependencies: []
