--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -7,18 +7,46 @@ driver:
 lint:
   name: 'yamllint'
 platforms:
-  - name: 'docker-docker-jessie'
+  - name: "docker-docker-centos7"
+    image: 'centos/systemd:latest'
+    command: '/sbin/init'
+    cap_add:
+      - 'SYS_PTRACE'
+    privileged: True
+    groups:
+      - 'os_family_redhat'
+  - name: "docker-docker-jessie"
     image: 'minimum2scp/systemd-jessie:latest'
     command: '/sbin/init'
     cap_add:
       - 'SYS_PTRACE'
     privileged: True
-  - name: 'docker-docker-xenial'
+    groups:
+      - 'os_family_debian'
+  - name: "docker-docker-stretch"
+    image: 'minimum2scp/systemd-stretch:latest'
+    command: '/sbin/init'
+    cap_add:
+      - 'SYS_PTRACE'
+    privileged: True
+    groups:
+      - 'os_family_debian'
+  - name: "docker-docker-xenial"
     image: 'solita/ubuntu-systemd:16.04'
     command: '/sbin/init'
     cap_add:
       - 'SYS_PTRACE'
     privileged: True
+    groups:
+      - 'os_family_debian'
+  - name: "docker-docker-bionic"
+    image: 'solita/ubuntu-systemd:18.04'
+    command: '/sbin/init'
+    cap_add:
+      - 'SYS_PTRACE'
+    privileged: True
+    groups:
+      - 'os_family_debian'
 provisioner:
   name: 'ansible'
   lint:
@@ -46,6 +74,8 @@ scenario:
   name: 'default'
 verifier:
   name: 'testinfra'
+  additional_files_or_dirs:
+    - '../../tests'
   lint:
     name: 'flake8'
   options:
