--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,15 @@
 [tox]
 minversion = 1.8
-envlist = py{27}-ansible{23}
+envlist = py{27}-ansible{24,25,26,27}
 skipsdist = true
 
 [testenv]
 passenv = *
 deps =
     -rrequirements.txt
-    ansible23: ansible>=2.3,<2.4
+    ansible24: ansible>=2.4,<2.5
+    ansible25: ansible>=2.5,<2.6
+    ansible26: ansible>=2.6,<2.7
+    ansible27: ansible>=2.7,<2.8
 commands =
-    molecule --debug test
+    molecule {env:MOLECULE_OPTIONS:--debug} {env:MOLECULE_COMMAND:test}
