--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -55,21 +55,27 @@ provisioner:
     group_vars:
       all:
         ansible_python_interpreter: '/usr/bin/env python2.7'
+        docker_remove_data: True
+        docker_registries_certificates:
+          - name: 'foo.bar:8081'
+            ca_cert: '__my_ca_cert__'
+            client_cert: '__my_client_cert__'
+            client_key: '__my_client_key__'
+      os_family_debian:
         docker_daemon_options:
           hosts:
             - 'tcp://127.0.0.1:8081'
             - 'unix:///var/run/docker.sock'
           tlscert: '/tmp/server.crt'
           tlskey: '/tmp/server.key'
-        docker_registries_certificates:
-          - name: 'foo.bar:8081'
-            ca_cert: '__my_ca_cert__'
-            client_cert: '__my_client_cert__'
-            client_key: '__my_client_key__'
-    host_vars:
-      docker-docker-jessie:
-        docker_packages:
-          - name: 'docker-ce=17.03*'
+      os_family_redhat:
+        docker_daemon_options:
+          hosts:
+            - 'tcp://127.0.0.1:8081'
+            - 'unix:///var/run/docker.sock'
+          storage-driver: 'devicemapper'
+          tlscert: '/tmp/server.crt'
+          tlskey: '/tmp/server.key'
 scenario:
   name: 'default'
 verifier:
