Add Docker privileged users management

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -44,6 +44,11 @@ docker_paths:
 
 # Docker registries certificates
 # -----------------------------------------------------------------------------
+docker_users: []
+
+
+# Docker registries certificates
+# -----------------------------------------------------------------------------
 docker_registries_certificates: []
 
 
