--- a/meta/main.yml
+++ b/meta/main.yml
@@ -5,9 +5,12 @@ galaxy_info:
   description: 'Ansible role to install and configure docker'
   company: 'Infopen (http://www.infopen.pro)'
   license: 'MIT'
-  min_ansible_version: '2.4'
+  min_ansible_version: '2.5'
   github_branch: 'master'
   platforms:
+    - name: 'EL'
+      versions:
+        - '7'
     - name: 'Debian'
       versions:
         - 'jessie'
